mqtt client in testing and string constants
