# template_onion_with_mqtt/server/Application/Models/StringConstants.cs
@@ -1,0 +1,9 @@
+namespace Application.Models;
+
+public static class StringConstants
+{
+    public const string Dashboard = nameof(Dashboard);
+    public const string Device = nameof(Device);
+
+    public const string ChangePreferences = nameof(ChangePreferences);
+}
