# template_onion_with_mqtt/server/Application/Services/WeatherStationService.cs
@@ -1,4 +1,5 @@
 ﻿using Application.Interfaces;
+using Application.Interfaces.Infrastructure.MQTT;
 using Application.Interfaces.Infrastructure.Postgres;
 using Application.Interfaces.Infrastructure.Websocket;
 using Application.Models;
@@ -7,7 +8,9 @@ using Infrastructure.MQTT.SubscriptionEventHandlers;
 
 namespace Application.Services;
 
-public class WeatherStationService(IWeatherStationRepository weatherStationRepository,
+public class WeatherStationService(
+    IWeatherStationRepository weatherStationRepository,
+    IMqttPublisher mqttPublisher,
     IConnectionManager connectionManager) : IWeatherStationService
 {
     public List<Devicelog> GetDeviceFeed(JwtClaims client)
@@ -31,7 +34,13 @@ public class WeatherStationService(IWeatherStationRepository weatherStationRepos
         {
             Logs = recentLogs,
         };
-        connectionManager.BroadcastToTopic("dashboard", broadcast);
+        connectionManager.BroadcastToTopic(StringConstants.Dashboard, broadcast);
+        return Task.CompletedTask;
+    }
+
+    public Task UpdateDeviceFeed(AdminChangesPreferencesDto dto, JwtClaims claims)
+    {
+        mqttPublisher.Publish(dto, StringConstants.Device+$"/{dto.DeviceId}/"+StringConstants.ChangePreferences);
         return Task.CompletedTask;
     }
 }
